can estimate k with num.sv and removed flash from suggests

--- a/README.Rmd
+++ b/README.Rmd
@@ -18,7 +18,7 @@ knitr::opts_chunk$set(
 [![Build Status](https://travis-ci.org/dcgerard/succotashr.svg?branch=master)](https://travis-ci.org/dcgerard/succotashr)
 
 ## Description
-Let 
+Let
 
 Y = XB + ZA + E,
 
@@ -27,11 +27,11 @@ for
 * Y an n by p matrix of gene expression data with n samples and p genes,
 * X an n by q matrix of of q covariates,
 * B a q by p matrix of unobserved coefficients for the observed covariates,
-* Z an n by k matrix of hidden confounders, 
+* Z an n by k matrix of hidden confounders,
 * A a k by p matrix of hidden coefficients for the hidden confounders, and
 * E an n by p matrix of independent normal errors with column variances s1,...,sp.
 
-Not accounting for the hidden covariates, Z, can reduce power and result in poor control of false discovery rate. 
+Not accounting for the hidden covariates, Z, can reduce power and result in poor control of false discovery rate.
 
 `succotashr` fits this model under a two-step empirical Bayesian approach. It places a non-parametric prior on B and jointly estimates B and ZA. The main function is `succotash`.
 
@@ -46,7 +46,6 @@ devtools::install_github("dcgerard/succotashr")
 The following packages are suggested:
 ```{r, eval = FALSE}
 install.packages("cate")
-devtools::install_github("NKweiwang/flash")
 source("https://bioconductor.org/biocLite.R")
-biocLite("limma")
+biocLite(c("limma", "sva"))
 ```
