change readme and description for vicar

--- a/README.Rmd
+++ b/README.Rmd
@@ -40,6 +40,7 @@ To install, run the following code in `R`:
 ```{r, eval = FALSE}
 install.packages(c("devtools", "SQUAREM"))
 devtools::install_github("stephens999/ashr")
+devtools::install_github("dcgerard/vicar")
 devtools::install_github("dcgerard/succotashr")
 ```
 
