--- a/README.Rmd
+++ b/README.Rmd
@@ -17,6 +17,9 @@ knitr::opts_chunk$set(
 # SUCCOTASH: Surrogate and Confounder Correction Occuring Together with Adaptive Shrinkage
 [![Build Status](https://travis-ci.org/dcgerard/succotashr.svg?branch=master)](https://travis-ci.org/dcgerard/succotashr)
 
+# This package is no longer maintained.
+Please see the `mouthwash` function in the R package [vicar](https://github.com/dcgerard/vicar).
+
 ## Description
 Let
 
